[package]
name = "advtech-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.23.0"
lazy_static = "1.4.0"
tera = "1.19.1"
serde = { version = "1", features = ["derive"]}
toml = "0.8.12"
walkdir = "2"
regex = "1.10.4"
grass = "0.13.2"
chrono = "0.4.38"
rand = "0.8.5"
